fix: footer links aligned center

--- a/stlye_footer.css
+++ b/stlye_footer.css
@@ -93,28 +93,39 @@ display: block;
         z-index: 1;
         
     }
+
 }
 
 @media (max-width: 600px) {
-    footer{
+    footer {
         margin-top: 230%;
         padding-top: 20px;
         z-index: 1;
     }
-    .footer-content{
+    .footer-content {
         margin-bottom: 40px;
     }
-    .socials{
+    .socials {
         margin: 20px 0;
     }
-    .footer-bottom p{
+    .footer-bottom p {
         float: none;
     }
-    .footer-menu{
+    .footer-menu {
         float: none;
         margin-top: 20px;
+        display: flex;
+        justify-content: center; /* Zentriert die Links horizontal */
+    }
+    .footer-menu ul {
+        display: inline-block; /* Verhindert Zeilenumbruch */
+    }
+    .footer-menu ul li {
+        padding-right: 10px;
+        display: inline-block; /* Zeigt die Links nebeneinander an */
     }
 }
+
 
 @media (max-width: 350px) {
     footer{
@@ -135,4 +146,5 @@ display: block;
         float: none;
         margin-top: 20px;
     }
+   
 }
